src/Theme/css/styles.css
html, body {
    height: 100%;
    padding: 0;
    margin: 0 auto;
    font-family: arial, serif;
    background: #fff;
    color: #000;
    line-height: 1.3em;
}

.grad {
    height: 5px;
    width: 100%;
}

.grad-main {
    background: #ffbf00; /* Old browsers */
    background: -moz-linear-gradient(left, #ffbf00 0%, #a06114 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(left, #ffbf00 0%, #a06114 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right, #ffbf00 0%, #a06114 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffbf00', endColorstr='#a06114', GradientType=1); /* IE6-9 */
}

header {
    -webkit-box-shadow: inset 0 10px 10px -10px rgba(0, 0, 0, 0.8);
    -moz-box-shadow: inset 0 10px 10px -10px rgba(0, 0, 0, 0.8);
    box-shadow: inset 0 10px 10px -10px rgba(0, 0, 0, 0.8);

    background: #2f2f2f;
    padding-top: 20px;
    padding-bottom: 20px;
    color: #fff;
}

header img {
    float: left;
}

header h1 {
    text-shadow: 2px 2px #000;
}

#header-top {
    width: 100%;
    height: 110px;
    display: table;
}

#logo {
    display: table-cell;
    vertical-align: middle;
    width: 70px;
}

#logo img {
    margin-right: 10px;
}

#logo-name {
    display: table-cell;
    vertical-align: middle;
    font-size: 1.5em;
    font-weight: bold;
    text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
}

#header-info {
    display: table;
}

#header-info h1 {
    display: table-cell;
    vertical-align: middle;
    width: 100%;
}

#header-search-box h1 {
    display: table-cell;
    vertical-align: middle;
}

#header-top nav {
    display: table-cell;
    vertical-align: middle;
}

#header-top nav ul {
    float: right;
    list-style-type: none;
}

#header-top nav li {
    display: inline;
    margin-left: 10px;
    padding-bottom: 5px;
}

#header-top nav li:hover, nav li.active {
    border-bottom: 3px solid #ffbf00;
}

#header-top nav a {
    color: #4D4D4D;
    font-weight: bold;
    font-size: 1em;
}

#header-top nav a:hover, nav li.active a {
    color: #000;
}

.cont {
    max-width: 1000px;
    margin: 0 auto;
    padding: 0 20px 0 20px;
    box-sizing: border-box;
}

main {
    color: #4D4D4D;
    background: #fff;
    font-size: 1.3em;
    line-height: 1.7em;
}

main img {
    border: 1px solid #BFBFBF;
    background: #fff;
    padding: 5px;
}

main a {
    color: #ffbf00;
}

.center {
    margin: 0 auto;
    text-align: center;
}

footer {
    font-size: 0.9em;
    color: #fff;
    background: #2f2f2f;
    padding-top: 20px;
    padding-bottom: 20px;
}

a {
    text-decoration: none;
    color: #fff;
}

pre {
    border: 1px solid #dddddd;
    background: #f4f4f4;
    padding: 10px;
    line-height: 1.2em;
    overflow-x: auto;
}

.modifier, .function, .classType, .extends {
    color: #936;
}

.type, .className {
    color: #693;
}

a .type, a .variable {
    text-decoration: underline;
}

.variable, .className {
    color: #369;
}

#search-result {
    display: none;
}

.meter {
    height: 20px;
    padding: 5px;
    position: relative;
    background: #f4f4f4 !important;
    border: 1px solid #dddddd;
}

.meter > span {
    display: block;
    height: 100%;
    position: relative;
    overflow: hidden;
}

.orange > span {
    background-color: #f1a165;
    background-image: linear-gradient(#f1a165, #f36d0a);
}

.nostripes > span > span, .nostripes > span:after {
    -webkit-animation: none;
    background-image: none;
}

.holder {
    position: relative;
}

#search {
    padding: 5px;
}

#search-result {
    list-style-type: none;
    position: absolute;
    background: #fff;
    border: 1px solid #dddddd;
    color: #000;
    padding: 10px;
    margin: 0;
}

#search-result a {
    color: #000;
    font-size: 0.8em;
}

#search-result a:hover {
    color: #ffbf00;
}

table {
    border-spacing: 0;
    border-collapse: collapse;
    width: 1%;
    margin: 10px 0 10px 0;
}

table caption {
    padding: 10px;
    border: 1px solid #dddddd;
    white-space: nowrap;
    background: #f4f4f4;
    border-bottom: none;
}

th {
    background: #f4f4f4;
}

tbody th {
    text-align: left;
}

th, td {
    padding: 10px;
    border: 1px solid #dddddd;
    white-space: nowrap;
}

ul {
    list-style: none;
}

ul input:checked + ul {
    display: none;
}

ul input {
    display: none;
}

ul label {
    cursor: pointer;
    color: #000;
}

.floatLeft {
    float: left;
    margin-right: 10px;
}

.clear {
    clear: both;
}

.full {
    width: 100%;
}

.deprecated {
    font-weight: bold;
    color: #ff0000;
}

main nav {
    margin: 10px 0 10px 0;
    width: 100%;
    border: 1px solid #dddddd;
}

main nav > ul {
    display: flex;
    flex-direction: row;
    margin: 0;
    padding: 0;
}

main nav > ul ul {
    display: none;
    position: absolute;
    background: #fff;
    border: 1px solid #dddddd;
    padding: 0;
    top: 100%;
    left: 0;
}

main nav > ul ul ul {
    display: none;
    position: absolute;
    left: 100%;
    top: 0;
}

main nav > ul ul:hover {
    display: inline-block;
}

main nav li {
    position: relative;
    list-style: none;
}

main nav > ul > li {
    flex-grow: 1;
}

main nav li a {
    display: block;
    padding: 5px;
    text-decoration: none;
    color: #000;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 0.8em;
    white-space: nowrap;
}

main nav li a:hover {
    color: #000;
    background: #ffbf00;
}

main nav li a:hover + ul {
    display: inline-block;
}

